--- a/index.html
+++ b/index.html
@@ -196,11 +196,14 @@
 
                                 <h2> <img src="/img/icon-skill-content.png" alt="" class="icon-content"> My Skills</h2>
 
-                                <div class="skill-bar progress">
-                                    <div class="progress-bar" style="width: 80%; height: 20px;">Html</div>
-
-
+                                <div class="skill-bar progress" style="width: 60%; height: 20px; margin-top: 20px;">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%;">Html</div>
                                 </div>
+
+                                <div class="skill-bar progress" style="width: 60%; height: 20px; margin-top: 20px;">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%;">Css</div>
+                                </div>
+
                             </div>
                         </div>
 
