--- a/index.html
+++ b/index.html
@@ -1,20 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -133,7 +116,8 @@
                                 <div class="progress-bar bg-warning" style="width:20%"></div>
                                 <div class="progress-bar" style="width:80%"></div>
                             </div>
-                            <p class="col-10-p"> After dealing with some difficulties in studying, my desire is being a part of the company in order to be educated. What is more, i want to contribute the corporation with my own knowledge</p>
+                            <h2 class="col-10-p"> After dealing with some difficulties in studying, my desire is being a part of the company in order to be educated. What is more, i want to contribute the corporation with my own knowledge. I am always willing to work hard
+                                whether the workload is high or not.</h2>
 
 
                             <h2> <img src="/img/job-ojective.png" class="icon-content" alt=""> Job Objective</h2>
@@ -153,7 +137,7 @@
 
                                         <div>
                                             <h2> Mobile Development</h2>
-                                            <h5 style="font-weight: lighter;">With little knowledge about Java Android which i have researched before combinkng with being educated by your company, i'll have the foundation of mobile app which works with the most popular Language Kotlin,
+                                            <h5 style="font-weight: lighter;">With little knowledge about Java Android which i have researched before combining with being educated by your company, i'll have the foundation of mobile app which works with the most popular Language Kotlin,
                                                 Swift and Dart ( Flutter). </h5>
                                         </div>
                                         <div style="margin-top: 20px;">
@@ -213,14 +197,31 @@
 
                                 <h2> <img src="/img/icon-skill-content.png" alt="" class="icon-content"> My Skills</h2>
 
-                                <div class="skill-bar progress" style="width: 60%; height: 20px; margin-top: 20px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 60%;">Html</div>
+                                <div class="row">
+
+
+                                    <div class="col-1"></div>
+                                    <div class="col-4" style="margin-top: 20px; ">
+                                        <img src="/img/html-css-icon.png" alt="" width="30%">
+                                        <img src="/img/java-icon.png" alt="" width="30%">
+                                    </div>
+
+                                    <div class="col-7">
+                                        <h2>Java Core, Html and Css</h2>
+                                        <h3 style="font-weight: lighter;">
+                                            I have basic knowledge in Html, Css, Java and OOP. I can quickly trained and willing to get more knowledge.
+
+                                        </h3>
+
+                                    </div>
+
+
                                 </div>
 
-                                <div class="skill-bar progress" style="width: 60%; height: 20px; margin-top: 20px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 40%;">Css</div>
-                                </div>
+                                ...
+                                <div class="row">
 
+                                </div>
                             </div>
                         </div>
 
@@ -230,13 +231,49 @@
                                 <div class="progress-bar bg-warning" style="width:80%"></div>
                                 <div class="progress-bar" style="width:20%"></div>
                             </div>
-                            <p>Try to scroll this page and look at the menu while scrolling!</p>
+
+
+                            <div class="row">
+
+                                <div class="col-2"></div>
+                                <div class="col-2 contact-tab">
+                                    <img class="contact-img" src="/img/skype-logo.png" alt="Skype">
+                                    <h6>live:.cid.d37d6794a185d2c5</h6>
+                                </div>
+
+                                <div class="col-2 contact-tab">
+                                    <img class="contact-img" src="/img/fb-logo.png" alt="Facebook">
+                                    <h6>hongquan15.10.98</h6>
+                                </div>
+
+                                <div class="col-2 contact-tab">
+                                    <img class="contact-img" src="/img/github-logo.png" alt="GitHub">
+                                    <h6>bongmeomeo</h6>
+                                </div>
+
+                                <div class="col-2 contact-tab">
+                                    <img class="contact-img" src="/img/Hangouts_Icon.png" alt="Gmail">
+                                    <h6>lhquan1998@gmail.com</h6>
+                                </div>
+
+
+                            </div>
+
+                            <div class="thanks-regard">
+
+                                <h2>If you interested in with my Profile, let's contact to me.</h2>
+                                <h2>Thanks and Best Regards!</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
 
+            <div class="row" style="height: 100px;">
+
+                <div class="col-6"> </div>
+            </div>
         </div>
 
     </div>
