--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                                 </div>
 
                                 <div class="col-2 contact-tab">
-                                    <img class="contact-img" src="/img/fb-logo.png" alt="Facebook">
-                                    <h6>hongquan15.10.98</h6>
+                                    <img class="contact-img" src="/img/zalo-logo.png" alt="Zalo">
+                                    <h6>(+84) 0898631030</h6>
                                 </div>
 
                                 <div class="col-2 contact-tab">
