--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                             <div class="thanks-regard">
 
-                                <h2>If you interested in with my Profile, let's contact to me.</h2>
+                                <h2>If you are interested in my Profile, let's contact to me.</h2>
                                 <h2>Thanks and Best Regards!</h2>
                             </div>
                         </div>
